--- a/bank-account/src/app/app.component.html
+++ b/bank-account/src/app/app.component.html
@@ -7,45 +7,8 @@
 
 <br>
 
-<div class="container">
-  <ul>
-    <li class="nav-item">
-      <a routerLink="#" class="nav-link">Home</a>
-    </li>
 
-    <li class="nav-item">
-      <a routerLink="#" class="nav-link">Add New Account</a>
-    </li>
-
-    <li class="nav-item">
-      <a routerLink="#" class="nav-link">Get Details</a>
-    </li>
-
-    <li class="nav-item">
-      <a routerLink="#" class="nav-link">Get All Details</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="#" class="nav-link">Update Detail</a>
-    </li>
-
-    <li class="nav-item">
-      <a routerLink="#" class="nav-link">Deposit</a>
-    </li>
-
-    <li class="nav-item">
-      <a routerLink="#" class="nav-link">Withdraw</a>
-    </li>
-
-    <li class="nav-item">
-      <a routerLink="#" class="nav-link">Fund Transfer</a>
-    </li>
-
-    <li class="nav-item">
-      <a routerLink="#" class="nav-link">Delete Account</a>
-    </li>
-  </ul>
-</div>
-<br>
+<router-outlet></router-outlet>
 
 
 <br>
