update microservices application

--- a/bank-account/src/app/app.component.html
+++ b/bank-account/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
   <nav class="navbar bg-dark navbar-expand-sm">
-    <h2>Welcome Net-Banking</h2>
+    <h2>Welcome To Net-Banking</h2>
   </nav>
 </div>
 
