--- a/bank-account/src/app/account/add-account.component.html
+++ b/bank-account/src/app/account/add-account.component.html
@@ -1,16 +1,16 @@
 <div class="container" style="width:40%">
-    <form>
+    <form (ngSubmit)="addNewAccount()" #customerForm="ngForm">
         <div class="form-group">
             <label class="form-label">Account Holder Name:</label><br>
-            <input type="text" class="form-control" name="accountholdername" />
+            <input type="text" class="form-control" name="accountholdername" [(ngModel)]="account.accountHolderName" />
         </div>
         <div class="form-group">
             <label class="form-label">Account Balance:</label><br>
-            <input type="number" class="form-control" name="accountbalance" />
+            <input type="number" class="form-control" name="accountbalance" [(ngModel)]="account.accountBalance" />
         </div>
         <div class="form-group">
             <label class="form-label">Account Type:</label>
-            <select class="form-control" name="accounttype">
+            <select class="form-control" name="accounttype" [(ngModel)]="account.accountType">
                 <option value="">--select--</option>
                 <option value="saving">Saving</option>
                 <option value="current">Current</option>
@@ -18,8 +18,8 @@
         </div>
         <form>
             <label class="form-label">Salary Account:</label><br>
-            <input type="radio" name="salary" value="salarytrue"> Yes<br>
-            <input type="radio" name="salary" value="salaryfalse"> No<br>
+            <input type="radio" name="salary" value=true [(ngModel)]="account.salary"> Yes<br>
+            <input type="radio" name="salary" value=false [(ngModel)]="account.salary"> No<br>
         </form>
         <br>
         <button type="submit" class="btn btn-block btn-primary">Register</button>
