--- a/bank-account/src/app/welcome.component.html
+++ b/bank-account/src/app/welcome.component.html
@@ -9,7 +9,7 @@
       </li>
   
       <li class="nav-item">
-        <a routerLink="#" class="nav-link">Get Details</a>
+        <a routerLink="getall" class="nav-link">Get Details</a>
       </li>
   
       <li class="nav-item">
